; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_idxmap.c_git_idxmap_icase_resize.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_idxmap.c_git_idxmap_icase_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@idxicase = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_idxmap_icase_resize(i32* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %5, align 8
  %7 = call i32 @git__is_uint32(i64 %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load i32, i32* @idxicase, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i64 @kh_resize(i32 %10, i32* %11, i32 %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %9, %2
  %17 = call i32 (...) @git_error_set_oom()
  store i32 -1, i32* %3, align 4
  br label %19

18:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %16
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @git__is_uint32(i64) #1

declare dso_local i64 @kh_resize(i32, i32*, i32) #1

declare dso_local i32 @git_error_set_oom(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
